Fix UI bug in which top nav covering body content on smaller device screens

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -136,6 +136,27 @@ p {
   }
 }
 
+@include media-breakpoint-down(xs) {
+  .announcementsPage,
+  .browseDataPage,
+  .codeRepoPage,
+  .contactPage,
+  .dataAccessPage,
+  .errorPage,
+  .geneCentricViewPage,
+  .graphicalClusteringPage,
+  .linkoutPage,
+  .mainStudyPage,
+  .methodsPage,
+  .relatedStudyPage,
+  .searchPage,
+  .teamPage,
+  .tutorialsPage {
+    padding-top: 8.50rem;
+  }
+}
+
+
 /*
 $primary:       $blue !default;
 $secondary:     $gray-600 !default;
